<resources>
    <string name="app_name">Encuetranos</string>
    <string name="default_web_client_id">872337376041-i2ivmqq52eaplm35jfi1ak64vhon6ida.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="escribe_tu_descripci_n">Escribe tu descripción</string>
    <string name="precio">Precio</string>
    <string name="guardar">Guardar</string>
    <string name="regresar">Regresar</string>
    <string name="agregar_servicio">Agregar Servicio</string>
    <string name="actualizar_contrase_a">Actualizar Contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nueva_contrase_a">Nueva Contraseña</string>
    <string name="confirmar_nueva_contrase_a">Confirmar nueva contraseña</string>
    <string name="actualizar">Actualizar</string>
    <string name="cliente">Cliente</string>
    <string name="nombre_del_cliente">Nombre del cliente</string>
    <string name="servicio">Servicio</string>
    <string name="s_000_00">S/ 000.00</string>
    <string name="estado">Estado</string>
    <string name="fecha_de_contrato">Fecha de contrato</string>
    <string name="_00_00_0_00_00_pm">00/00/0 - 00:00 pm</string>
    <string name="fecha_de_servicio">Fecha de servicio</string>
    <string name="inicio">Inicio</string>
    <string name="_00_00_00_0_00_pm">00/00/00 - 0:00 pm</string>
    <string name="fin">Fin</string>
    <string name="eliminar_contrato">Eliminar contrato</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="ofreces_alg_n_servicio">¿Ofreces algún servicio?</string>
    <string name="s">Sí</string>
    <string name="no">No</string>
    <string name="enviar">Enviar</string>
    <string name="nombre_proveedor">Nombre proveedor</string>
    <string name="calificacion_proveedor">Calificacion proveedor</string>
    <string name="descargar_cv">descargar cv</string>
    <string name="contacto">Contacto</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="correo_proveedor">Correo proveedor</string>
    <string name="celular_proveedor">Celular proveedor</string>
    <string name="celular">Celular</string>
    <string name="acerca_de_mi">Acerca de mi</string>
    <string name="descripcion_proveedor">Descripcion proveedor</string>
    <string name="servicios_que_ofrece">Servicios que ofrece</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="eres_nuevo">¿Eres nuevo?</string>
    <string name="registrate">Registrate</string>
    <string name="buscar">Buscar</string>
    <string name="mis_servicios">MIS SERVICIOS</string>
    <string name="descripci_n">Descripción</string>
    <string name="elija_un_documento">Elija un documento</string>
    <string name="curriculum_vitae">Curriculum Vitae</string>
    <string name="actualizar_informaci_n_personal">Actualizar Información personal</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="dni">DNI</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="empieza_tu_b_squeda">EMPIEZA TU BÚSQUEDA</string>
    <string name="registrate_para_navegar_en_nuestra_plataforma">Registrate para navegar en nuestra plataforma</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="informaci_n_personal">Información personal</string>
    <string name="precio_m_nimo">Precio mínimo</string>
    <string name="precio_m_ximo">Precio máximo</string>
    <string name="aplicar_filtro">Aplicar filtro</string>
    <string name="bienvenido">!Bienvenido,</string>
    <string name="usuario">Usuario</string>
    <string name="explora_y_contrata_nservicios_dom_sticos">Explora y contrata\nservicios domésticos</string>
    <string name="buscar_servicios">Buscar Servicios</string>
    <string name="funcionalidades">Funcionalidades</string>
    <string name="como_realizar_un_contrato">¿Como realizar un Contrato?</string>
    <string name="por_q_e_elegirnos">¿Por qúe elegirnos?</string>
    <string name="nombres_y_apellidos">nombres y apellidos</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="cambiar_mi_contrase_a">Cambiar mi contraseña</string>
    <string name="mis_contratos">Mis contratos</string>
    <string name="mis_servicios_minuscula">Mis Servicios</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="encuentra_tu_servicio">Encuentra tu servicio</string>
    <string name="servicios_disponibles">Servicios disponibles</string>
    <string name="fecha">Fecha</string>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="hora">Hora</string>
    <string name="_00_00_pm">00:00 pm</string>
    <string name="nombre_del_usuario">Nombre del usuario</string>
    <string name="mensaje_del_usuario">Mensaje del usuario</string>
    <string name="nombre_del_servicio">Nombre del servicio</string>
    <string name="descripci_n_del_servicio">Descripción del servicio</string>
    <string name="nombre_del_proveedor">Nombre del proveedor</string>
    <string name="negociable">negociable</string>
    <string name="ver_perfil">Ver Perfil</string>
    <string name="servicios_que_ofrece_negociables">Servicios Que ofrece (Negociables)</string>
    <string name="servicios_que_ofrece_no_negociables">Servicios Que ofrece (No Negociables)</string>
    <string name="enviar_mensaje">Enviar Mensaje</string>
    <string name="contratar">Contratar</string>
    <string name="rese_as">Reseñas</string>
    <string name="calificacion">calificacion</string>
    <string name="comentario">Comentario</string>
    <string name="ingrese_el_precio_negociado">Ingrese el precio negociado</string>
    <string name="nuevo_contrato">¡Nuevo Contrato!</string>
    <string name="aceptar_contrato">Aceptar Contrato</string>
    <string name="denegar_contrato">Denegar Contrato</string>
    <string name="buscar_contrato_por_cliente">Buscar contrato por cliente</string>
    <string name="los_cambios_se_realizaron_n_con_xito">!Los cambios se realizaron \n con éxito!</string>
    <string name="fecha_de_fin">Fecha de fin</string>
    <string name="fecha_de_incio">Fecha de incio</string>
    <string name="servicios_negociables">Servicios negociables</string>
    <string name="servicios_no_negociables">Servicios no negociables</string>
    <string name="ingrese_un_monto">Ingrese un monto</string>
</resources>