<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.opcionesPerfilFragment.InformacionPersonalActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header_volver" />

    <LinearLayout
        android:id="@+id/LinearDescription"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/btnActualizar">

        <TextView
            android:id="@+id/tvActualizarInformacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actualizar_informaci_n_personal"
            android:textSize="20dp"
            android:textColor="@color/skinBlack"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingStart="16dp"
            android:hint="@string/nombre_completo"
            android:paddingVertical="12dp"
            android:background="@drawable/rectangle_border"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:inputType="text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/edtApellidoPaterno"
                android:layout_marginEnd="3dp"
                android:paddingStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/apellido_paterno"
                android:paddingVertical="12dp"
                android:background="@drawable/rectangle_border"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:inputType="text"/>
            <EditText
                android:id="@+id/edtApellidoMaterno"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:layout_marginStart="3dp"
                android:hint="@string/apellido_materno"
                android:paddingVertical="12dp"
                android:background="@drawable/rectangle_border"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:inputType="text"/>
        </LinearLayout>

        <EditText
            android:id="@+id/edtFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="16dp"
            android:hint="@string/fecha_de_nacimiento"
            android:paddingVertical="12dp"
            android:background="@drawable/rectangle_border"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:inputType="date"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/edtDni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dni"
                android:layout_marginEnd="3dp"
                android:paddingVertical="12dp"
                android:paddingStart="16dp"
                android:background="@drawable/rectangle_border"
                android:textStyle="bold"
                android:inputType="number"/>
            <EditText
                android:id="@+id/edtCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="3dp"
                android:paddingStart="16dp"
                android:hint="@string/celular"
                android:paddingVertical="12dp"
                android:background="@drawable/rectangle_border"
                android:textStyle="bold"
                android:inputType="phone"/>
        </LinearLayout>

        <Spinner
            android:id="@+id/distritoSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:paddingVertical="12dp"
            android:background="@drawable/rectangle_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/edtOfreceServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sexo"
            android:textStyle="bold"
            android:layout_marginStart="5dp"/>

        <RadioGroup
            android:id="@+id/radio_group_servicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radio_masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/masculino"
                android:layout_marginEnd="50dp"/>

            <RadioButton
                android:id="@+id/radio_femenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/femenino"/>
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_background"
        android:text="@string/actualizar"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/LinearDescription"
        app:layout_constraintStart_toStartOf="@+id/LinearDescription"
        app:layout_constraintTop_toBottomOf="@id/LinearDescription" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
