<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.PerfilFragment"
    android:background="@color/edtGray">

    <include
        android:id="@+id/Header"
        layout="@layout/header"/>

    <LinearLayout
        android:id="@+id/informacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/Header"
        app:layout_constraintBottom_toTopOf="@id/opciones">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUsuario"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_background"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvInformacionPersonal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/skinBlack"
                android:textSize="17dp"
                android:text="@string/nombres_y_apellidos"/>
            <TextView
                android:id="@+id/tvInformacionCorreoPersonal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/correo_electr_nico"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/opciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/cerrarSesion"
        app:layout_constraintEnd_toEndOf="@+id/informacion"
        app:layout_constraintStart_toStartOf="@+id/informacion"
        app:layout_constraintTop_toBottomOf="@id/informacion">

        <LinearLayout
            android:id="@+id/tvPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="top|bottom"
                android:text="@string/mi_perfil" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tvVerInformacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_perfil" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="top|bottom"
                android:text="@string/informaci_n_personal" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/tvContratos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_contrato" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="top|bottom"
                android:text="@string/mis_contratos" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tvMisServicios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_servicemano" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="top|bottom"
                android:text="@string/mis_servicios_minuscula" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/opciones"
        app:layout_constraintTop_toBottomOf="@id/opciones">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logout" />

        <TextView
            android:id="@+id/tvCerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="top|bottom"
            android:text="@string/cerrar_sesi_n" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/Header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>