<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:layout_marginBottom="7dp"
    android:layout_marginTop="7dp"
    android:background="?attr/selectableItemBackground">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgCliente"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginEnd="4dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/tvNombreProveedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nombre_del_proveedor"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <RatingBar
                    android:id="@+id/ratingBarProveedor"
                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/yellow"
                    android:rating="3.5"
                    android:scaleX="0.65"
                    android:scaleY="0.65"
                    android:stepSize="0.1" />

                <TextView
                    android:id="@+id/tvServicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/servicio"
                    android:textStyle="bold"
                    android:textColor="@color/grayBlack"/>
                <TextView
                    android:id="@+id/tvPrecioActual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:textColor="@color/grayNoSoft"
                    android:text="@string/s_000_00"/>
                <Button
                    android:id="@+id/btnVerPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_background"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/ver_perfil"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
