<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:elevation="4dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:id="@+id/cardViewContracts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgCliente"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_launcher_background"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="10dp">

                    <TextView
                        android:id="@+id/tvNombreCliente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="40dp"
                        android:text="@string/nombre_del_cliente"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tvServicio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="40dp"
                        android:text="@string/servicio"
                        android:textColor="@color/grayBlack"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content">

                        <RatingBar
                            android:id="@+id/ratingBarProveedor"
                            style="@style/Widget.AppCompat.RatingBar.Indicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:isIndicator="true"
                            android:numStars="5"
                            android:progressTint="@color/yellow"
                            android:rating="3.5"
                            android:scaleX="0.65"
                            android:scaleY="0.65"
                            android:stepSize="0.1" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tvComentarioCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/comentario"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
